# rustzen-admin

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.claude/: settings.json
migrations/: 0101_system_table.sql  0101_table.sql  0102_relation.sql  0103_system_view.sql  0103_view.sql  0104_func.sql  0104_system_func.sql  0105_seed.sql  0105_system_seed.sql  0106_add_user_status_password_permissions.sql  0106_init_log_partitions.sql  0106_partition.sql  0107_add_login_lockout.sql  0108_user_sessions.sql  0109_update_user_with_roles_view.sql  0110_add_effective_status_to_view.sql  0111_remove_dict_feature.sql
migrations/legacy-01/: 100100_create_user.sql  100200_create_role.sql  100300_create_menu.sql  109001_seed_menu.sql  109002_seed_role.sql  109003_seed_dict.sql
src/: lib.rs  main.rs
src/common/: api.rs  error.rs  files.rs  mod.rs  pagination.rs  router_ext.rs  status.rs  validation.rs
src/core/: app.rs  config.rs  db.rs  extractor.rs  jwt.rs  mod.rs  password.rs  permission.rs  session.rs  system_info.rs  web_embed.rs
src/features/auth/: api.rs  dto.rs  model.rs  repo.rs  service.rs
src/features/dashboard/: api.rs  dto.rs  repo.rs
src/features/system/: mod.rs
src/middleware/: auth.rs
tests/: api_http_tests.rs  integration_rbac_flow.rs
web/: .oxlintrc.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: main.tsx  routeTree.gen.ts  router.ts
web/src/api/: api.d.ts  getAuthHeaders.test.ts  index.test.tsx  index.ts
web/src/components/: TabBar.test.tsx  (+3 more)
(+130 files in other folders)
