[package]
authors = ["bruce <bruce@idaibin.dev>"]
name = "rustzen-admin"
version = "0.2.2"
edition = "2024"


[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21"

# for CORS and logging middleware
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# database related dependencies
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "chrono",
    "uuid",
    "ipnetwork",
] }
dotenvy = "0.15"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

# password hashing
argon2 = "0.5"
rand = "0.8"
sysinfo = "0.36.1"
futures = "0.3.31"
include_dir = "0.7.4"
figment = { version = "0.10.19", features = ["env"] }

# TypeScript type generation
ts-rs = { version = "12.0", features = ["chrono-impl", "serde-json-impl"] }

[dev-dependencies]
# Enables #[sqlx::test] macro: auto-creates/migrates/tears-down a test DB per test
sqlx = { version = "0.8", features = ["migrate"] }
# HTTP-level integration tests for Axum routers
axum-test = "17"
